--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>My Application</title>
-    </head>
-    <body>
-        <script src="static/app.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+    />
+    <title>Data Table</title>
+  </head>
+  <body>
+          
+    <div id="test"></div>
+       
+    <script src="./static/app.js"></script>
+  </body>
 </html>
