--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
     <title>Data Table</title>
-  </head>
-  <body>
-          
-    <div id="test"></div>
-       
+</head>
+
+<body>
+
+        <div class="pa4">
+            <div class="overflow-auto">
+            <table class="f6 w-100 mw8 center b--black-20 ba" cellspacing="0">
+                <thead id="table-header"></thead>
+                <tbody class="lh-copy" id="table-body"></tbody>
+            </table>
+            </div>
+        </div>
+
     <script src="./static/app.js"></script>
-  </body>
+</body>
+
 </html>
