--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,80 @@
 </head>
 
 <body>
-
-        <div class="pa4">
-            <div class="overflow-auto">
-            <table class="f6 w-100 mw8 center b--black-20 ba" cellspacing="0">
-                <thead id="table-header"></thead>
-                <tbody class="lh-copy" id="table-body"></tbody>
-            </table>
+    <div class="pt1 pb1 mv3 mh6-l bg-light-gray">
+        <div>
+            <!-- Arrow functions  -->
+            <div class="flex items-center justify-center mt4">
+                <!-- Left arrows -->
+                <div id="prev-btns" class="ba br--left br4 mr3 bg-blue">
+                    <a href="#0" id="firstPage" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 border-box br--left br4">
+                        <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor;">
+                            <title>LastPage Left</title>
+                            <line x1="0" y1="0" x2="0" y2="40" style="stroke:currentcolor;stroke-width:6"></line>
+                            <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
+                        </svg>
+                    </a>
+                    <a href="#0" id="prevPage" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 ph2 border-box">
+                        <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextPage Left</title>
+                            <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
+                        </svg>
+                        <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextPage Left</title>
+                            <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
+                        </svg>
+                    </a>
+                    <a href="#0" id="prevLine" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 border-box">
+                        <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextRow Left</title>
+                            <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
+                        </svg>
+                    </a>
+                </div>
+                <!-- Row numbers -->
+                <span class="mr1 ml2">Showing</span>
+                <input type=number value="10" name="numRows" class="mw3" id="numRowsInTable">
+                <span class="ph2 mr1 ml1"> rows out of </span>
+                <input type=number value="100" name="totalRows" class="mw4" id="totalRowsInArr">
+                <span class="ph2 mr1 ml1">starting at row</span>
+                <input type=number value="1" name="startRows" class="mw3 mr2" id="indexRowInTable">
+                <!-- Right Arrows -->
+                <div id="next-btns" class="ba br--right br4 ml3 bg-blue">
+                    <a href="#0" id="nextLine" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 border-box">
+                        <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextRow Right</title>
+                            <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
+                        </svg>
+                    </a>
+                    <a href="#0" id="nextPage" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 ph2 border-box">
+                        <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextPage Right</title>
+                            <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
+                        </svg>
+                        <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>NextPage Right</title>
+                            <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
+                        </svg>
+                    </a>
+                    <a href="#0" id="lastPage" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa1 border-box br--right br4">
+                        <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
+                            <title>LastPage Right</title>
+                            <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
+                            <line x1="28" y1="0" x2="28" y2="40" style="stroke:currentcolor;stroke-width:4"></line>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
-
-    <script src="./static/app.js"></script>
+        <div class="pa4">
+            <div class="overflow-auto">
+                <table class="f6 w-100 mw8 center b--black-20 ba" cellspacing="0">
+                    <thead id="table-header"></thead>
+                    <tbody class="lh-copy" id="table-body"></tbody>
+                </table>
+            </div>
+        </div>
+        <script src="./static/app.js"></script>
 </body>
 
 </html>
