Make table as components

--- a/public/index.html
+++ b/public/index.html
@@ -74,14 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="pa4">
-            <div class="overflow-auto">
-                <table class="f6 w-100 mw8 center b--black-20 ba" cellspacing="0">
-                    <thead id="table-header"></thead>
-                    <tbody class="lh-copy" id="table-body"></tbody>
-                </table>
-            </div>
-        </div>
+        <div id="table"></div>
         <script src="./static/app.js"></script>
 </body>
 
